# airflow_docker_example

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dags/: requirements.txt  test_dags.py
nginx/: nginx.conf  nginx.crt  nginx.key
