[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["jzd <ppol850564@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
pytest = "^6.2.4"
apache-airflow = {extras = ["all"], version = "^2.1.2"}

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[[tool.flit.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
